Add debug step to CI workflow to check SFR_III signature

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -43,6 +43,12 @@ jobs:
       run: |
         pip install -e .
     
+    - name: Debug SFR_III function
+      env:
+        CLASSDIR: ${{ github.workspace }}/class_public
+      run: |
+        python -c "import zeus21; from zeus21.sfrd import SFR_III; import inspect; print('SFR_III parameters:', inspect.signature(SFR_III)); print('Parameter count:', len(inspect.signature(SFR_III).parameters))"
+        
     - name: Run tests with coverage
       env:
         CLASSDIR: ${{ github.workspace }}/class_public
