Add Codecov token to configuration for coverage reporting

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -55,7 +55,8 @@ jobs:
       run: |
         python -m pytest --cov=zeus21 tests/
     
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: false
