--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -53,11 +53,15 @@ jobs:
       env:
         CLASSDIR: ${{ github.workspace }}/class_public
       run: |
-        python -m pytest --cov=zeus21 tests/
+        python -m pytest --cov=zeus21 --cov-report=xml --cov-report=term tests/
     
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
+        files: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        verbose: true
         fail_ci_if_error: false
